Fix wrap text in th on mobile

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -26,6 +26,10 @@ table {
     width: 100%;
 }
 
+th {
+    white-space: nowrap;
+}
+
 
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * 
  *  BUTTONS WITH LABELS AND ICONS                                            *
